2004-10-18  Johan Dahlin  <johan@gnome.org>

	* flumotion/admin/gtk/main.py:
	* flumotion/wizard/save.py:
	* flumotion/wizard/wizard.py:

	Make --wizard and --debug work again.

	Create muxers when we need them and make sure to only create them
	when they're needed.
	
2004-10-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/errors.py:
	* flumotion/component/overlay/Makefile.am:
	* flumotion/component/overlay/cc_24x24.png:
	* flumotion/component/overlay/fluendo_24x24.png:
	* flumotion/component/overlay/genimg.py:
	* flumotion/component/overlay/xiph_24x24.png:
	  rename a little
	* flumotion/worker/job.py:
	* flumotion/worker/worker.py:
	  handle failed imports more gracefully than before

2004-10-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/admin.py:
	* flumotion/admin/gtk/client.py:
	* flumotion/component/component.py:
	  not having an UI is not an error.
	  clear UI in admin when no UI.

2004-10-18  Wim Taymans  <wim@fluendo.com>

	* flumotion/admin/gtk/main.py:
	* flumotion/manager/component.py:
	Fix uninitialized var.
	Fix dependency breakage.

2004-10-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/file/file.py:
	  make name slightly cleaner
	* flumotion/component/webcam/webcam.py:
	  more webcam fixing, use filtercaps

2004-10-17  Wim Taymans  <wim@fluendo.com>

	* data/glade/wizard_overlay.glade:
	Fix typo.

2004-10-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* data/glade/wizard_webcam.glade:
	* flumotion/component/webcam/webcam.py:
	  turn off autoprobe
	  lock spinbutton's values to what webcams can actually do

2004-10-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/admin.py:
	  fix Johan's bug

2004-10-17  Johan Dahlin  <johan@gnome.org>

	* flumotion/test/test_wizard.py: Fix test breakage

	* bin/flumotion-admin.in:
	* flumotion/admin/admin.py:
	* flumotion/admin/gtk/Makefile.am:
	* flumotion/admin/gtk/client.py: